Cleaned up doc and API keys removed

--- a/chatbot_oo_db/chatbot_client.ipynb
+++ b/chatbot_oo_db/chatbot_client.ipynb
@@ -5,12 +5,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Erstmaliges Erstellen eines Chatbots \"Coach\" für einen User X"
+    "## Ein OO-Chatbbot mit GPT 3.5-Turbo und Datenbank\n",
+    "Damit können mehrere Chatbot-Typen (z.B. ein Health Coach und einen Priester) erstellt werden. Pro Chatbot-Typ können mehrere Chatbot-Instanzen (z.B. für User X und User Y) erstellt werden. Beide, Type und Instanz werden mit einer ID (z.B. mit einer UUID) erstellt und referenziert.\n",
+    "\n",
+    "Dies kann die Umsetzung von Chatbots in einem Web-Backend (State-less) unterstützt werden.\n",
+    "\n",
+    "Eine Instanz wird mit folgenden Argumenten erzeugt.\n",
+    "- database_file: Datei von SQLite\n",
+    "- type_id: Referenz auf Chatbot-Typ\n",
+    "- instance_id: Referenz auf Chatbot-Instanz (pro User)\n",
+    "- type_role: Rolle gemäss Typ (wird zu Prompt mit role:system)\n",
+    "- instance_context: Kontext für Instanz (wird zu Prompt mit role:system)\n",
+    "- instance_starter: Aufforderung zur Erzeugung eines ersten Assistant-Texts (wird zu Prompt mit role:system)\n",
+    "\n",
+    "Folgende Methoden sind für die Anwendung gedacht.\n",
+    "- conversation_retrieve(with_system=False): Hervorhohlen des bisherigen Verlaufs\n",
+    "- starter(): Gibt einen ersten Assistant-Text zurück\n",
+    "- response_for(user_says): Gibt eine Assistant-Antwort auf User-Says zurück"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Erstellen eines Chatbots \"Coach\" für einen User X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +62,16 @@
     "    instance_starter='''\n",
     "        Create a short prompt to greet the user and get the conversation started.\n",
     "    '''\n",
-    "    )\n",
-    "\n",
-    "print(bot.conversation_retrieve())"
+    "    )"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Hervorhohlen von Chatbot \"Coach\" für User X und hervorhohlen des bisherigen Verlaufs (inkl. System TODO?)"
+    "#### Hervorhohlen von Chatbot \"Coach\" für User X\n",
+    "inkl. hervorhohlen des bisherigen Verlaufs (ohne role:system, mit: with_system=True)"
    ]
   },
   {
@@ -62,7 +86,7 @@
     "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\"\n",
     ")\n",
     "\n",
-    "print(bot.conversation_retrieve(with_system=True))"
+    "print(bot.conversation_retrieve())"
    ]
   },
   {
@@ -70,7 +94,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Hervorhohlen von Chatbot \"Coach\" für User X und abholen eines Bot-Texts an den User"
+    "#### Hervorhohlen von Chatbot \"Coach\" für User X\n",
+    "inkl. abholen eines Bot-Texts an den User. Mit starter() wird der Bot aufgefordert, eine Begrüssung eines Benutzers zu erzeugen (siehe Konstruktor-Argument instance_starter)"
    ]
   },
   {
@@ -93,7 +118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Hervorhohlen von Chatbot \"Coach\" für User X und abgabe von User-Text an den Bot inkl. Rückgabe von Bot-Text an User"
+    "#### Hervorhohlen von Chatbot \"Coach\" für User X\n",
+    "inkl. Abgabe von User-Text an den Bot inkl. Rückgabe von Assistant-Text an User"
    ]
   },
   {
@@ -119,30 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Hervorhohlen von Chatbo \"Coach\" für User X und abholen eines Bot-Texts an den User"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bot = Chatbot(\n",
-    "    database_file=\"data/chatbot.db\", \n",
-    "    type_id=\"f886c172-ad3f-4497-a848-519f69d5379b\",\n",
-    "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\"\n",
-    ")\n",
-    "\n",
-    "print(bot.starter())"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Erstmaliges Erstellen eines Chatbots \"Pastor\" für einen User Y"
+    "#### Erstellen eines zweiten Chatbots \"Pastor\" für einen User Y"
    ]
   },
   {
@@ -169,18 +172,7 @@
     "    instance_starter='''\n",
     "        Create a short prayer.\n",
     "    '''\n",
-    "    )\n",
-    "\n",
-    "print(pastor.conversation_retrieve())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(pastor.conversation_retrieve())"
+    "    )"
    ]
   },
   {
