--- a/teenager_coach.ipynb
+++ b/teenager_coach.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import os\n",
     "import openai\n",
-    "openai.api_key = \"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\"\n",
-    "openai.organization = \"org-URhHRj9qqmQqR8yZZNJcRClX\""
+    "openai.api_key = \"...\""
    ]
   },
   {
