--- a/chatbot_oo_db/chatbot_client.ipynb
+++ b/chatbot_oo_db/chatbot_client.ipynb
@@ -6,21 +6,21 @@
    "metadata": {},
    "source": [
     "## Ein OO-Chatbbot mit GPT 3.5-Turbo und Datenbank\n",
-    "Damit können mehrere Chatbot-Typen (z.B. ein Health Coach und einen Priester) erstellt werden. Pro Chatbot-Typ können mehrere Chatbot-Instanzen (z.B. für User X und User Y) erstellt werden. Beide, Type und Instanz werden mit einer ID (z.B. mit einer UUID) erstellt und referenziert.\n",
+    "Damit können mehrere Chatbot-Typen (z.B. ein Health Coach und einen Priester) erstellt werden. Pro Chatbot-Typ können mehrere Chatbot-Instanzen (z.B. für User X und User Y) erstellt werden. Beide, Typ und Instanz werden mit einer ID (z.B. mit einer UUID) erstellt und referenziert.\n",
     "\n",
-    "Dies kann die Umsetzung von Chatbots in einem Web-Backend (State-less) unterstützt werden.\n",
+    "Dies kann die Umsetzung von Chatbots in einem Web-Backend (State-less) unterstützt werden. Zum Beispiel können die UUIDs vom Typ und von der Instanz als GET-Parameter einer URL ausgelesen werden, welche ein Benutzer benützt.\n",
     "\n",
-    "Eine Instanz wird mit folgenden Argumenten erzeugt.\n",
+    "Ein Chatbot wird mit folgenden Argumenten erzeugt.\n",
     "- database_file: Datei von SQLite\n",
     "- type_id: Referenz auf Chatbot-Typ\n",
-    "- instance_id: Referenz auf Chatbot-Instanz (pro User)\n",
-    "- type_role: Rolle gemäss Typ (wird zu Prompt mit role:system)\n",
-    "- instance_context: Kontext für Instanz (wird zu Prompt mit role:system)\n",
+    "- instance_id: Referenz auf Chatbot-Instanz (typischerweise pro User, aber auch von mehreren Usern geteilt möglich)\n",
+    "- type_role: GPT-Rolle gemäss Chatbot-Typ (wird zu einem Prompt mit role:system)\n",
+    "- instance_context: Kontext für Chatbot-Instanz (wird zu einem Prompt mit role:system)\n",
     "- instance_starter: Aufforderung zur Erzeugung eines ersten Assistant-Texts (wird zu Prompt mit role:system)\n",
     "\n",
     "Folgende Methoden sind für die Anwendung gedacht.\n",
-    "- conversation_retrieve(with_system=False): Hervorhohlen des bisherigen Verlaufs\n",
-    "- starter(): Gibt einen ersten Assistant-Text zurück\n",
+    "- conversation_retrieve(with_system=False): Hervorhohlen des bisherigen Verlaufs (default ohne role:system)\n",
+    "- starter(): Gibt einen ersten Assistant-Text zurück (zur Eröffnung des Chats mit dem User)\n",
     "- response_for(user_says): Gibt eine Assistant-Antwort auf User-Says zurück"
    ]
   },
@@ -71,7 +71,7 @@
    "metadata": {},
    "source": [
     "#### Hervorhohlen von Chatbot \"Coach\" für User X\n",
-    "inkl. hervorhohlen des bisherigen Verlaufs (ohne role:system, mit: with_system=True)"
+    "inkl. hervorhohlen des bisherigen Verlaufs (ohne role:system, falls mit erwünscht: with_system=True)"
    ]
   },
   {
@@ -134,10 +134,10 @@
     "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\"\n",
     ")\n",
     "\n",
-    "bot.response_for('''\n",
+    "print(bot.response_for('''\n",
     "    I am usually happy when I am sad.\n",
     "    But then I fell happy which made me sad.\n",
-    "''')"
+    "'''))"
    ]
   },
   {
@@ -202,9 +202,9 @@
     "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\"\n",
     ")\n",
     "\n",
-    "pastor.response_for('''\n",
+    "print(pastor.response_for('''\n",
     "    I don't want to pray.\n",
-    "''')"
+    "'''))"
    ]
   }
  ],
