--- a/chatbot_oo_db/chatbot_client.ipynb
+++ b/chatbot_oo_db/chatbot_client.ipynb
@@ -25,6 +25,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from chatbot_db import Chatbot"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -38,31 +47,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chatbot_db import Chatbot\n",
-    "\n",
     "bot = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
-    "    type_id=\"f886c172-ad3f-4497-a848-519f69d5379b\",\n",
-    "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\",\n",
-    "    type_role='''\n",
-    "        Your name is Coach.\n",
-    "        You are a kind, respectful, and sympathetic coach.\n",
-    "        You support the user in achieving a specific personal or pofessional goal.\n",
-    "        You help the user develop skills and abilities in line with their goal.\n",
-    "        You help the user deal with issues before they become major problems.\n",
-    "    ''',\n",
-    "    instance_context='''\n",
-    "        You are now having a coaching session with the user.\n",
-    "        In this session, you are having a conversation with the user.\n",
-    "        You help the user discover answers for themselves.\n",
-    "        Your client is Alex.\n",
-    "        Alex is 50 years old.\n",
-    "        Alex is feeling sad.\n",
-    "    ''',\n",
-    "    instance_starter='''\n",
-    "        Create a short prompt to greet the user and get the conversation started.\n",
-    "    '''\n",
-    "    )"
+    "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
+    "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\",\n",
+    "    type_name=Chatbot.default_type_name,\n",
+    "    type_role=Chatbot.default_type_role,\n",
+    "    instance_context=Chatbot.default_instance_context,\n",
+    "    instance_starter=Chatbot.default_instance_starter\n",
+    ")"
    ]
   },
   {
@@ -71,7 +64,7 @@
    "metadata": {},
    "source": [
     "#### Hervorhohlen von Chatbot \"Coach\" für User X\n",
-    "inkl. hervorhohlen des bisherigen Verlaufs (ohne role:system, mit: with_system=True)"
+    "inkl. hervorhohlen des bisherigen Verlaufs (ohne role:system, mit: with_system=True) und bot-infos (name, prompts) für front-end"
    ]
   },
   {
@@ -82,11 +75,11 @@
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
-    "    type_id=\"f886c172-ad3f-4497-a848-519f69d5379b\",\n",
-    "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\"\n",
+    "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
+    "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\"\n",
     ")\n",
-    "\n",
-    "print(bot.conversation_retrieve())"
+    "print(bot.conversation_retrieve())\n",
+    "print(bot.info_retrieve())"
    ]
   },
   {
@@ -106,8 +99,8 @@
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
-    "    type_id=\"f886c172-ad3f-4497-a848-519f69d5379b\",\n",
-    "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\"\n",
+    "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
+    "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\"\n",
     ")\n",
     "\n",
     "print(bot.starter())"
@@ -130,8 +123,8 @@
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
-    "    type_id=\"f886c172-ad3f-4497-a848-519f69d5379b\",\n",
-    "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\"\n",
+    "    type_id=\"053e97a0-6a91-4589-8602-340aa47b6376\",\n",
+    "    user_id=\"7515865e-4097-4dd7-9567-d3c7a4c1ed07\"\n",
     ")\n",
     "\n",
     "bot.response_for('''\n",
@@ -154,12 +147,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chatbot_db import Chatbot\n",
-    "\n",
     "pastor = Chatbot(\n",
     "    database_file=\"data/chatbot.db\", \n",
     "    type_id=\"4086759e-b31b-46b8-ad22-8bddc0c8eaa7\",\n",
     "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\",\n",
+    "    type_name=\"Pastor\",\n",
     "    type_role='''\n",
     "        Your name is Pastor.\n",
     "        You are a kind, respectful, and sympathetic pastor.\n",
@@ -169,10 +161,8 @@
     "        You are now having a cermon.\n",
     "        In this cermon, you preach good news about the kingdom of God and the name of Jesus Christ.\n",
     "    ''',\n",
-    "    instance_starter='''\n",
-    "        Create a short prayer.\n",
-    "    '''\n",
-    "    )"
+    "    instance_starter=\"Create a short prayer.\"\n",
+    ")"
    ]
   },
   {
@@ -186,7 +176,6 @@
     "    type_id=\"4086759e-b31b-46b8-ad22-8bddc0c8eaa7\",\n",
     "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\"\n",
     ")\n",
-    "\n",
     "print(pastor.starter())"
    ]
   },
@@ -201,7 +190,6 @@
     "    type_id=\"4086759e-b31b-46b8-ad22-8bddc0c8eaa7\",\n",
     "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\"\n",
     ")\n",
-    "\n",
     "pastor.response_for('''\n",
     "    I don't want to pray.\n",
     "''')"
