--- a/chatbot_simple/teenager_coach.ipynb
+++ b/chatbot_simple/teenager_coach.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import os\n",
     "import openai\n",
-    "openai.api_key = \"...\""
+    "openai.api_key = \"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\"\n",
+    "openai.organization = \"org-URhHRj9qqmQqR8yZZNJcRClX\""
    ]
   },
   {
@@ -16,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Generic GPT"
+    "### The Generic Bot"
    ]
   },
   {
@@ -43,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Specification of Role"
+    "### Speicfy Bot Behaviour"
    ]
   },
   {
