--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -6,22 +6,22 @@
    "metadata": {},
    "source": [
     "## Ein OO-Chatbbot mit GPT 3.5-Turbo und Datenbank\n",
-    "Damit können mehrere Chatbot-Typen (z.B. ein Health Coach und ein Lern-Assistent) erstellt werden. Pro Chatbot-Typ können mehrere Chatbot-Instanzen (z.B. für User X und User Y) erstellt werden. Beide, Typ und Instanz werden mit einer ID (z.B. mit einer UUID) erstellt und referenziert.\n",
+    "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. for User X and User Y). Both, type and instance are stored and referenced with an ID (e.g. with a UUID) in the database.\n",
     "\n",
-    "Dies kann die Umsetzung von Chatbots in einem Web-Backend (State-less) unterstützen. Zum Beispiel können die UUIDs vom Typ und von der Instanz als URL-Parameter von einer URL ausgelesen werden, welche ein Benutzer von dir erhalten hat.\n",
+    "This can support the deployment of chatbots in a web backend (state-less). For example, the UUIDs of the type and instance can be read as URL parameters from a URL that users have received from you.\n",
     "\n",
-    "Ein Chatbot wird mit folgenden Argumenten erzeugt.\n",
-    "- database_file: Datei von SQLite (in einem Ordner data/)\n",
-    "- type_id: Referenz auf Chatbot-Typ\n",
-    "- instance_id: Referenz auf Chatbot-Instanz (typischerweise pro User, aber auch von mehreren Usern geteilt möglich)\n",
-    "- type_role: GPT-Rolle gemäss Chatbot-Typ (wird zu einem Prompt mit role:system)\n",
-    "- instance_context: Kontext für Chatbot-Instanz (wird zu einem Prompt mit role:system)\n",
-    "- instance_starter: Aufforderung zur Erzeugung eines ersten Assistant-Texts (wird zu Prompt mit role:system)\n",
+    "A chatbot is created with the following arguments.\n",
+    "- database_file: File of SQLite (in Folder data/)\n",
+    "- type_id: Reference to chatbot type\n",
+    "- instance_id: Reference to chatbot instance (typically one per user - however, may also be shared by multiple users)\n",
+    "- type_role: Role of chatbot type (will be turned into a first prompt with role:system)\n",
+    "- instance_context: Context of chatbot instance (will be turned into a second prompt with role:system)\n",
+    "- instance_starter: Will be used to generate an initial message to the user (will be turned into a final prompt with role:system)\n",
     "\n",
-    "Folgende Methoden sind für die Anwendung gedacht (z.B. in einer REST API).\n",
-    "- conversation_retrieve(with_system=False): Hervorhohlen des bisherigen Verlaufs (default: ohne role:system)\n",
-    "- starter(): Gibt einen ersten Assistant-Text zurück (zur Eröffnung des Chats mit dem User. gemäss instance_starter)\n",
-    "- response_for(user_says): Gibt eine Assistant-Antwort auf User-Says zurück"
+    "The following functions are meant to be used from an application (e.g. from controllers of a REST API).\n",
+    "- conversation_retrieve(with_system=False): Retrieve the previous conversation history (default: without prompts with role:system)\n",
+    "- starter(): Returns an initial message to the user (Resulting from instance_starter prompt)\n",
+    "- response_for(user_says): Returns an assistance response to user_says"
    ]
   },
   {
@@ -42,6 +42,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
