--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ein OO-Chatbbot mit GPT 3.5-Turbo und Datenbank\n",
+    "## An Object-Oriented Chatbot using GPT and a Database\n",
     "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. for User X and User Y). Both, type and instance are stored and referenced with an ID (e.g. with a UUID) in the database.\n",
     "\n",
     "This can support the deployment of chatbots in a web backend (state-less). For example, the UUIDs of the type and instance can be read as URL parameters from a URL that users have received from you.\n",
@@ -114,7 +114,7 @@
     "URL to be handed out to the user\n",
     "\n",
     "##### Generic URL\n",
-    "https://[your python user name]/pythonanywhere.com/[type id]/[user_id]/chat\n",
+    "https://[your pythonanywhere user name]/pythonanywhere.com/[type id]/[user_id]/chat\n",
     "##### For Example\n",
     "https://monkey23.pythonanywhere.com/053e97a0-6a91-4589-8602-340aa47b6376/7515865e-4097-4dd7-9567-d3c7a4c1ed07/chat"
    ]
