--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -138,7 +138,7 @@
     "    database_file=\"data/chatbot.db\", \n",
     "    type_id=\"4086759e-b31b-46b8-ad22-8bddc0c8eaa7\",\n",
     "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\",\n",
-    "    type_name=\"Pastor\"\n",
+    "    type_name=\"Pastor\",\n",
     "    type_role='''\n",
     "        Your are a mindful learning assistant. You always reply with short responses.\n",
     "        You help users when they do their homework for school or prepare for exams.\n",
