--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -179,9 +179,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "85192c1308de97a0a552990c50e2ee0d7e39e6a94dde21e8d44426cb851fe7c3"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
