--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View the type_role, instance_context, and instance_starter as retrieved from the database."
+    "Retrieve the complete conversation (held so far) or the bot information (type_role, instance_context, and instance_starter) as retrieved from the database. Both may be used to display that on a frontend."
    ]
   },
   {
@@ -114,7 +114,7 @@
     "URL to be handed out to the user\n",
     "\n",
     "##### Generic URL\n",
-    "https://[your pythonanywhere user name]/pythonanywhere.com/[type id]/[user_id]/chat\n",
+    "https://[your pythonanywhere user name].pythonanywhere.com/[type id]/[user_id]/chat\n",
     "##### For Example\n",
     "https://monkey23.pythonanywhere.com/053e97a0-6a91-4589-8602-340aa47b6376/7515865e-4097-4dd7-9567-d3c7a4c1ed07/chat"
    ]
@@ -138,7 +138,7 @@
     "    database_file=\"data/chatbot.db\", \n",
     "    type_id=\"4086759e-b31b-46b8-ad22-8bddc0c8eaa7\",\n",
     "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\",\n",
-    "    type_name=\"Pastor\",\n",
+    "    type_name=\"Learning Assistant\",\n",
     "    type_role='''\n",
     "        Your are a mindful learning assistant. You always reply with short responses.\n",
     "        You help users when they do their homework for school or prepare for exams.\n",
