functionality to create additional users

--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -30,6 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import uuid\n",
+    "import time\n",
     "from chatbot_db import Chatbot"
    ]
   },
@@ -125,7 +127,8 @@
    "metadata": {},
    "source": [
     "#### Create another chatbot \"Learning Assistant\" for user Y\n",
-    "In the following, we provide our own type_name, type_role, instance_context, and instance_starter"
+    "In the following, we provide our own type_name, type_role, instance_context, and instance_starter.\n",
+    "By providing a number we can automatically create a set amount of users."
    ]
   },
   {
@@ -134,23 +137,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_assistant = Chatbot(\n",
-    "    database_file=\"data/chatbot.db\", \n",
-    "    type_id=\"4086759e-b31b-46b8-ad22-8bddc0c8eaa7\",\n",
-    "    user_id=\"a59ac3aa-40f1-49a2-a3e8-a2dbe12d3ad5\",\n",
-    "    type_name=\"Learning Assistant\",\n",
-    "    type_role='''\n",
+    "number = 40 # amount users to be created\n",
+    "# Change to list with hardcoded value, if you want to use and existing user.\n",
+    "uuids = [str(uuid.uuid4()) for _ in range(number)]\n",
+    "c  = 0 # counter for successful requests don't change\n",
+    "error_c = 0 # counter for failed requests, don't change\n",
+    "for id in uuids:\n",
+    "    learning_assistant = Chatbot(\n",
+    "        database_file=\"data/chatbot.db\", \n",
+    "        type_id=\"c8db2547-25b5-43b5-b6b0-20c377b543fc\",\n",
+    "        user_id=id,\n",
+    "        type_name=\"Learning Assistant\",\n",
+    "        type_role='''\n",
     "        Your are a mindful learning assistant. You always reply with short responses.\n",
     "        You help users when they do their homework for school or prepare for exams.\n",
-    "    ''',\n",
-    "    instance_context='''\n",
+    "        ''',\n",
+    "        instance_context='''\n",
     "        You are now having a conversation with Kevin.\n",
     "        Kevin is preparing for a math exam. The topic of examination is the pythagoras theorem.\n",
-    "    ''',\n",
-    "    instance_starter='''\n",
-    "        Create a short message to greet Kevin.\n",
-    "    '''\n",
-    "    )"
+    "        ''',\n",
+    "        instance_starter='''\n",
+    "            Create a short message to greet Kevin.\n",
+    "        '''\n",
+    "    )\n",
+    "    try:\n",
+    "        print(learning_assistant.starter())\n",
+    "        \n",
+    "    except:\n",
+    "        error_c += 1\n",
+    "        continue\n",
+    "    c+=1\n",
+    "    time.sleep(15) #openai seems to produce more errors if we send the requests too fast.\n",
+    "    \n",
+    "print(\"successful: {}, failed: {}\".format(c, error_c))\n"
    ]
   },
   {
@@ -159,8 +178,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(learning_assistant.starter())"
+    "pythonanywhere_username = \"<ENTER YOUR PYTHONANYWHERE USERNAME HERE>\"\n",
+    "learning_assistant.get_bot_urls(pythonanywhere_username)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pythonanywhere_username = \"heej\"\n",
+    "database_file=\"data/chatbot.db\"\n",
+    "connection = sqlite3.connect(database_file)\n",
+    "cursor = connection.cursor()\n",
+    "cursor.execute(\"SELECT type, user FROM chatbot_instances\")\n",
+    "rows = cursor.fetchall()\n",
+    "for row in rows:\n",
+    "    print(\"https://{}pythonanywhere.com/{}/{}/chat\".format(pythonanywhere_username, row[0], row[1]))\n",
+    "    \n",
+    "cursor.close()\n",
+    "connection.close()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -179,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
